[1] about me fixed

--- a/_posts/2023-06-30-welcome.md
+++ b/_posts/2023-06-30-welcome.md
@@ -11,11 +11,11 @@ tags:
 ---
 Это первый пост в моем блоге. 
 
-Блог предполагаю вести о программировании, дизайне систем, архитектуре ПО и моем пути в ИТ.
+Блог предполагаю вести о программировании, дизайне систем, архитектуре ПО.
 
-Обо мне можно посмотреть [тут](https://mukhinav.ru/about)
+Обо мне можно посмотреть [тут]({{ site.baseurl }}/about)
 
-Я очень давно увлекаюсь программированиеем, интересуюсь дизайном ПО, как устроены большие и сложные системы.
+Я очень давно увлекаюсь программированием, интересуюсь дизайном ПО, как устроены большие и сложные системы.
 
 Блог никогда не вел, так что возможны ошибки :-)
 
