--- a/static/404.md
+++ b/static/404.md
@@ -14,7 +14,7 @@ keywords:
  - solution architect
 ---
 
-<p><img src="/assets/img/404.png" alt="404" width="150" height="150"></p>
+<p><img src="{{ site.baseurl }}/assets/img/404.png" alt="404" width="150" height="150"></p>
 
 <p itemprop="description" class="subtitle shadow-text animasi-in-opacity">
   <b>Вы просматриваете мой блог.</b>
