--- a/_posts/2023-07-09-read.md
+++ b/_posts/2023-07-09-read.md
@@ -16,33 +16,31 @@ tags:
  - Источники
  - Книги
 ---
-Поговорим про то где брать информацию.
+Поговорим про то, где брать информацию.
 
 Специфика IT предполагает быстрое изменение подходов, методологий, появление новых языков, Framework. Конечно, есть вечная база, которую нужно знать. Это устройство ПК, операционных систем, основные алгоритмы и структуры данных. Базовые знания в ИТ можно получить из книг, лекций ВУЗОВ или конференций. 
 <!--more-->
-Молодым специалистам часто кажется, что источников слишком 
-много, и могут возникать сложности с выбором. Так и есть. Книг выпускается большое количество. Но главное, что хороших и основательных - мало.
+Молодым специалистам часто кажется, что источников слишком много, и могут возникать сложности с выбором. Так и есть. Книг выпускается большое количество. Но главное, что хороших и основательных - мало.
 Есть очень хорошие книги на английском. С переводом, конечно, иногда нужно поразбираться, бывают неточности.    
-
 
 ## Базовые знания
 
 Для Java я использовал лекции МФТИ, раньше были в [электронном](http://ermak.cs.nstu.ru/cbooks/java_Vyazovyk.pdf) варианте, сейчас, насколько я знаю, и в формате [видео](https://mipt.ru/online/algoritmov-i-tekhnologiy/programmirovanie-na-java.php).
 
-Производители технологий обычно выкладывают бесплатные руководства на своих сайтах. Это первоисточник. 
+Производители технологий обычно выкладывают бесплатные руководства на своих сайтах. Это первоисточник.
 
-В первую очередь, необходимо изучить это, а дальше можно использовать опыт других. 
+В первую очередь, необходимо изучить это, а дальше можно использовать опыт других.
 
-На мой взгляд базовыми знаниями для Java-программиста являются:
+На мой взгляд, базовыми знаниями для Java-программиста являются:
 
 - Java core - это основы языка, языковые конструкции, типы данных и их устройство, управление исполнением программы, базовые функции ввода / вывода и т.д.
 - Системы сборки и управления  проектом - maven для начала, потом gradle.
-- Системы контроля версий - берем самую известную сейчас - GIT,
-- протокол обмена - REST,
-- формат данных - Json,
-- Ну и для упрощения добавляем сразу Spring Boot (Spring Framework),
+- Системы контроля версий - берем самую известную сейчас - GIT.
+- Протокол обмена - REST.
+- Формат данных - Json.
+- Ну и для упрощения добавляем сразу Spring Boot (Spring Framework).
 
-Компания [Oracle](https://www.oracle.com/), как производитель [Java](https://www.oracle.com/java/), выкладывает [документацию на своем сайте](https://docs.oracle.com/en/java/javase/20/), также у них есть [сертифицированные курсы](https://education.oracle.com/certification ). 
+Компания [Oracle](https://www.oracle.com/), как производитель [Java](https://www.oracle.com/java/), выкладывает [документацию на своем сайте](https://docs.oracle.com/en/java/javase/20/), также у них есть [сертифицированные курсы](https://education.oracle.com/certification). 
 
 Есть набор библиотек [Spring Framework](https://spring.io/), позволяющий упростить код с помощью готовых решений.
 
@@ -53,9 +51,15 @@ tags:
 ## Конференции
 
 На конференциях выступают профи и делятся опытом применения каких-либо технологий в проектах. Это очень полезная информация, которая
-позволяет не допускать лишних ошибок. Из основных это [JUG.RU](https://jug.ru/), [Jpoint](https://jpoint.ru/), [Joker](https://jokerconf.com/), есть конференции от [VK](https://vk.company/ru/press/events/?year=2023&title=) и [Yandex](https://events.yandex.ru/).
+позволяет не допускать лишних ошибок. Из основных это:
+- [JUG.RU](https://jug.ru/),
+- [JPoint](https://jpoint.ru/),
+- [Joker](https://jokerconf.com/), 
+- есть конференции от [VK](https://vk.company/ru/press/events/?year=2023&title=) и [Yandex](https://events.yandex.ru/).
 
-Для начального уровня достаточно лекций, Spring и документации Oracle как справочника.Также можно читать статьи на сайтах, где сидят программисты, 
+Для начального уровня достаточно лекций, Spring и документации Oracle как справочника. Также можно читать статьи на сайтах, где сидят программисты, 
 сейчас их стало больше.
 
-За свой многолетний опыт методом проб и ошибок я подобрал достаточный список источников для изучения. Если говорить про книги, многие я начинал читать в электронном виде, со временем пополняя свою библиотеку печатными изданиями. Обязательно буду делиться своими мыслями относительно этого опыта и рассказывать про свои самые крутые находки.
+За свой многолетний опыт методом проб и ошибок я подобрал достаточный список источников для изучения. Если говорить про книги, 
+многие я начинал читать в электронном виде, со временем пополняя свою библиотеку печатными изданиями. Обязательно буду делиться 
+своими мыслями относительно этого опыта и рассказывать про свои самые крутые находки.
